--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "imagekit": "^6.0.0",
     "lucide": "^0.563.0",
     "lucide-react": "^0.563.0",
+    "imagekitio-next": "^1.0.1",
     "mongoose": "^9.1.5",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
@@ -25,10 +26,13 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.24",
     "babel-plugin-react-compiler": "1.0.0",
+    "daisyui": "^5.5.18",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5"
   }
 }
